Fixed #8545 - p-dialog not centered in IE and overflows on maximize

--- a/src/app/components/dialog/dialog.css
+++ b/src/app/components/dialog/dialog.css
@@ -19,7 +19,6 @@
 }
 
 .ui-dialog {
-    position: fixed;
     padding: 0;
     pointer-events: auto;
     display: flex;
